--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -15,7 +15,7 @@ Ultima atualização: 19/05/2024
 Formato CSS: estilo_ammi - HEADER - Nazaré do Piauí /PI
 Ultima atualização: 19/05/2024
 */
-#logodio{ 
+.logodio{ 
 	position: absolute;
 	width: 100px; 
 	height: 100px; 
