--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -22,7 +22,7 @@ Ultima atualização: 19/05/2024
 	border-radius: 32px; 
 	margin-left: 50px;
 	}
-#logodio:hover{ box-shadow: 0px 15px 122px rgb(97, 27, 209); }
+.logodio:hover{ box-shadow: 0px 15px 122px rgb(97, 27, 209); }
 .primeira-linha-apresentação-desafio-dio{
 	font-size: 16px;
 	float: left;
