--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -20,7 +20,7 @@ Ultima atualização: 19/05/2024
 	width: 100px; 
 	height: 100px; 
 	border-radius: 32px; 
-	margin-left: 50px;
+	-webkit-margin-top-collapse: 100px;
 	}
 .logodio:hover{ box-shadow: 0px 15px 122px rgb(97, 27, 209); }
 .primeira-linha-apresentação-desafio-dio{
