--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -29,7 +29,7 @@ Ultima atualização: 19/05/2024
 		margin-top: -14px;
 		background-color: rgb(219,87,106);
 		padding: 22px 62px 36px 22px;
-		border-radius: 52px 12px 224px;
+		border-radius: 52% 12% 224%;
 		color: rgb(253,255,163);
 		box-shadow: 3px 9px 39px #033, 0px 9px 19px rgb(97, 27, 209);
 		
