--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -67,7 +67,7 @@ Ultima atualização: 19/05/2024
 		font-style: normal;
 		font-size: 42px; 	}
 	.name{text-shadow: 2px 2px 5px rgb(97, 27, 209); text-align: right;}
-	.nav-doc ul li{ display: inline-block; margin-top: -12px;}
+	.nav-doc{ display: inline-block; margin-top: -12px;}
 	.oswald{
 		font-family: "Oswald", sans-serif;
 		font-optical-sizing: auto;
