--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -18,6 +18,7 @@ Ultima atualização: 19/05/2024
 	.logodio{ 
 		position: absolute;
 		border-radius: 32%; 
+		width: 4cm;
 	}
 	.logodio:hover{ box-shadow: 0px 15px 122px rgb(97, 27, 209); }
 	.primeira-linha-apresentação-desafio-dio{
