--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -19,7 +19,7 @@ Ultima atualização: 19/05/2024
 		position: absolute;
 		border-radius: 32%; 
 		width: 4cm;
-	}
+		margin-left: 2cm;	}
 	.logodio:hover{ box-shadow: 0px 15px 122px rgb(97, 27, 209); }
 	.primeira-linha-apresentação-desafio-dio{
 		font-size: 16px;
