--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -16,7 +16,7 @@ Formato CSS: estilo_ammi - HEADER - Nazaré do Piauí /PI
 Ultima atualização: 19/05/2024
 */
 	.logodio{ 
-		position: relative;
+		position: absolute;
 		border-radius: 32%; 
 		width: 4cm;
 		margin-left: 1cm;	}
