--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -43,15 +43,12 @@ Ultima atualização: 19/05/2024
 	
 }  
 .docs:hover{ background-color: #fff; color: rgb(53,46,138)}
-.emoji{ position: absolute; width: 80px; margin-top: 22px; }
+.emoji{ position: absolute; width: 80px; }
 .foto-profile{ 
 	position: absolute; 
 	border-radius: 32px; 
 	box-shadow: 3px 9px 39px #033, 0px 9px 119px rgb(97, 27, 209);
-	width: 290px;
-	margin-top: -380px;
-	margin-left: 600px;
-}	
+	width: 290px;}	
 .answer{
 	padding: 5px;
 	text-align: justify;
