Style: Update README.md

--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -32,7 +32,7 @@ Ultima atualização: 19/05/2024
 .docs{
 	margin: 14px;
 	margin-top: -14px;
-	background-color: rgb(219,87,106);
+	background-color:  rgb(97, 27, 209);
 	padding: 22px 62px 36px 22px;
 	border-radius: 52% 12% 224%;
 	color: rgb(253,255,163);
