--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -18,7 +18,7 @@ Ultima atualização: 22/05/2024 - 14:30
 	width: 100%; 
 	border-radius: 32%; 
 	margin-left: 2%; 
-	margin-top: 2%;}
+	margin-top: 4%;}
 
 .logodio:hover{ box-shadow: 0px 15px 122px rgb(97, 27, 209); }
 .primeira-linha-apresentação-desafio-dio{
@@ -40,7 +40,7 @@ Ultima atualização: 22/05/2024 - 14:30
 	
 }  
 .docs:hover{ background-color: #fff; color: rgb(53,46,138)}
-.emoji{ position: absolute; width: 80px; margin-top: -25px; }
+.emoji{ width: 100%; margin-top: -2%; }
 .foto-profile{ 
 	border-radius: 32%; 
 	box-shadow: 3px 9px 39px #033, 0px 9px 119px rgb(97, 27, 209);
@@ -81,7 +81,6 @@ Ultima atualização: 22/05/2024 - 14:30
 	font-weight: 400;
 	font-style: normal;
 	font-size: 36px;
-	padding-left: 102px;
 }
 .question{
 	padding: 5px;
@@ -106,7 +105,6 @@ Ultima atualização: 22/05/2024 - 14:30
 	text-align: center;
 }
 .orientadora{
-	width: 4cm;
-	border-radius: 32%;
-	position: inherit;
-	margin-left: 400px;
+	width: 100%;
+	border-radius: 52%;
+	text-align: center;
