--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -1,110 +1,51 @@
-
-
 /****https://github.com/MarciaMoreno/dio-lab-open-source
-Formato CSS: estilo_ammi - BODY - Nazaré do Piauí /PI
-Ultima atualização: 19/05/2024
-*/
-	p{ text-align: justify; text-indent: 32px;}
-	a{text-decoration: none;}
-	a:hover{box-shadow: 0px 15px 122px rgb(97, 27, 209);}
-	table {border-collapse: collapse;}
-	ul li{text-decoration: none;}
-	
-/****https://github.com/MarciaMoreno/dio-lab-open-source
-Formato CSS: estilo_ammi - HEADER - Nazaré do Piauí /PI
-Ultima atualização: 22/05/2024 - 14:30
-*/
-.logodio{ 
-	width: 100%; 
-	border-radius: 32%; 
-	margin-left: 2%; 
-	margin-top: 4%;}
-
-.logodio:hover{ box-shadow: 0px 15px 122px rgb(97, 27, 209); }
-.primeira-linha-apresentação-desafio-dio{
-	font-size: 16px;
-}
-
-/****https://github.com/MarciaMoreno/dio-lab-open-source
-Formato CSS: estilo_ammi - SECTION - Nazaré do Piauí /PI
-Ultima atualização: 22/05/2024 - 14:30
-*/
-.docs{
-	margin: 14px;
-	margin-top: -14px;
-	background-color:  rgb(97, 27, 209);
-	padding: 22px 62px 36px 22px;
-	border-radius: 52% 12% 224%;
-	color: rgb(253,255,163);
-	box-shadow: 3px 9px 39px #033, 0px 9px 19px rgb(97, 27, 209);
-	
-}  
-.docs:hover{ background-color: #fff; color: rgb(53,46,138)}
-.emoji{ width: 100%; margin-top: -2%; }
-.foto-profile{ 
-	border-radius: 32%; 
-	box-shadow: 3px 9px 39px #033, 0px 9px 119px rgb(97, 27, 209);
-	width: 290px;}	
-.answer{
-	padding: 5px;
-	text-align: justify;
-}
+Formato CSS: @import - Fontes do Google.
+Atualização: 20/05/2024****/
 .barlow-semi-condensed-light-italic {
 	font-family: "Barlow Semi Condensed", sans-serif;
 	font-weight: 300;
-	font-style: italic; 
-}
-/***Para utilizar na formatação da frase de efeito no final do profile...***/
+	font-style: italic; }
 .dancing-script{
 	font-family: "Dancing Script", cursive;
 	font-optical-sizing: auto;
 	font-weight: <weight>;
 	font-style: normal;
-	font-size: 52px;
-}
+	font-size: 52px;}
 .ibm-plex-mono-regular {
 	font-family: "IBM Plex Mono", monospace;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 42px;
-	}
-.name{text-shadow: 2px 2px 5px rgb(97, 27, 209); text-align: right;}
-.nav-doc ul li{ display: inline-block; margin-top: -12px;}
+	font-size: 42px;}
 .oswald{
 	font-family: "Oswald", sans-serif;
 	font-optical-sizing: auto;
 	font-weight: <weight>;
-	font-style: normal;
-}
+	font-style: normal;}
 .pacifico-regular {
 	font-family: "Pacifico", cursive;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 36px;
-}
-.question{
-	padding: 5px;
-	text-align: right;
-	
-}
-/*** <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 300 to 700***/
-.comfortaa{
-	  font-family: "Comfortaa", sans-serif;
-	  font-optical-sizing: auto;
-	  font-weight: <weight>;
-	  font-style: normal;
-	}
-	
+	font-size: 36px;}
 /****https://github.com/MarciaMoreno/dio-lab-open-source
-Formato CSS: estilo_ammi - FOOTER - Nazaré do Piauí /PI
-Ultima atualização: 22/05/2024 - 14:30
+Formato CSS: estilo_ammi - BODY - Nazaré do Piauí /PI
+Ultima atualização: 22/05/2024 - 15:29
 */
-.footer{
-	line-height: 2px;
-	text-align: center;
-}
-.orientadora{
-	width: 100%;
-	border-radius: 52%;
-	text-align: center;
+p{ text-align: justify; text-indent: 32px;}
+	a{text-decoration: none;}
+	a:hover{box-shadow: 0px 15px 122px rgb(97, 27, 209);}
+	table {border-collapse: collapse;}
+	ul li{text-decoration: none;}
+/****https://github.com/MarciaMoreno/dio-lab-open-source
+Formato CSS: estilo_ammi - div - Nazaré do Piauí /PI
+Ultima atualização: 22/05/2024 - 15:29
+*/
+.logodio{ 
+	width: 100%; 
+	border-radius: 32%; 
+	margin: 4%;}
+.logodio:hover{ 
+	box-shadow: 0px 15px 122px rgb(97, 27, 209); }
+.primeira-linha-apresentação-desafio-dio{
+	font-size: 16px; }
+.emoji{ width: 100%; }
+
