Style: Update Commit

--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -58,9 +58,8 @@ Ultima atualização: 22/05/2024 - 15:29
 .foto-profile{ 
 	border-radius: 32%; 
 	box-shadow: 3px 9px 39px #033, 0px 9px 119px rgb(97, 27, 209);
-	width: 100%;
-	height: 150%;
-	margin-top: 30%;}
+	width: 80%;
+	height: 100%;}
 .docs{
 	margin: 4%;
 	margin-top: 14%;
