--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -59,9 +59,9 @@ Ultima atualização: 22/05/2024 - 15:29
 	border-radius: 32%; 
 	box-shadow: 3px 9px 39px #033, 0px 9px 119px rgb(97, 27, 209);
 	width: 100%;
-	height: 100%;
-	margin-top: 10%;}
+	margin-top: 30%;}
 .docs{
+	padding:52% 12% 74%;
 	margin: 4%;
 	margin-top: 14%;
 	background-color:  rgb(97, 27, 209);	
