--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -56,7 +56,7 @@ Ultima atualização: 22/05/2024 - 15:29
 	width: 40%; 
 	margin-top: -5%; }
 .foto-profile{ 
-	border-radius: 32%; 
+	border-radius: 42%; 
 	box-shadow: 3px 9px 39px #033, 0px 9px 119px rgb(97, 27, 209);
 	width: 100%;
 	margin-top: 30%;}
@@ -76,3 +76,6 @@ Ultima atualização: 22/05/2024 - 15:29
 .name{
 	text-shadow: 2px 2px 5px rgb(97, 27, 209); 
 	text-align: center;}
+.temp_foot{
+	text-align: center;
+}
