--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -86,3 +86,6 @@ Ultima atualização: 22/05/2024 - 15:29
 	margin-left: 30%;
 	background-color: rgb(97, 27, 209);
 }
+.rodape{
+	padding-left: 30%;
+}
