Style: Update Commit

--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -25,7 +25,8 @@ Atualização: 20/05/2024****/
 	font-family: "Pacifico", cursive;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 36px;}
+	font-size: 36px;
+	padding-right: 20%;}
 .comfortaa{
 	font-family: "Comfortaa", sans-serif;
 	font-optical-sizing: auto;
