Style: Update Commit

--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -26,7 +26,7 @@ Atualização: 20/05/2024****/
 	font-weight: 400;
 	font-style: normal;
 	font-size: 36px;
-	padding-right: 20%;}
+	padding-left: -20%;}
 .comfortaa{
 	font-family: "Comfortaa", sans-serif;
 	font-optical-sizing: auto;
