--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -56,7 +56,8 @@ Ultima atualização: 22/05/2024 - 15:29
 .emoji{ 
 	width: 40%; 
 	margin-top: -5%;
-	margin-left: 10%; }
+	margin-left: 10%;
+	float: right;}
 .foto-profile{ 
 	border-radius: 42%; 
 	box-shadow: 3px 9px 39px #033, 0px 9px 119px rgb(97, 27, 209);
