Style: Update Commit

--- a/css/estilo-profile.css
+++ b/css/estilo-profile.css
@@ -66,6 +66,7 @@ Ultima atualização: 22/05/2024 - 15:29
 .docs{
 	padding: 32px;
 	margin: 4%;
+	margin-left: 10%;
 	margin-top: 14%;
 	background-color:  rgb(97, 27, 209);	
 	color: rgb(253,255,163);}
